[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/FloorMap.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/WallMap.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/BackgroundMap.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/player.tscn" type="PackedScene" id=4]
[ext_resource path="res://sprite/Big door.png" type="Texture" id=5]
[ext_resource path="res://scenes/hub.gd" type="Script" id=6]
[ext_resource path="res://sprite/Pb frame.png" type="Texture" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 35.8657, 65.317 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 6 )

[node name="FloorMap2" parent="." instance=ExtResource( 1 )]
tile_data = PoolIntArray( 2424832, 0, 0, 2424833, 0, 1, 2424834, 0, 1, 2424835, 0, 1, 2424836, 0, 1, 2424837, 0, 1, 2424838, 0, 1, 2424839, 0, 1, 2424840, 0, 1, 2424841, 0, 1, 2424842, 0, 1, 2424843, 0, 1, 2424844, 0, 1, 2424845, 0, 1, 2424846, 0, 1, 2424847, 0, 1, 2424848, 0, 1, 2424849, 0, 1, 2424850, 0, 1, 2424851, 0, 1, 2424852, 0, 1, 2424853, 0, 1, 2424854, 0, 1, 2424855, 0, 1, 2424856, 0, 1, 2424857, 0, 1, 2424858, 0, 1, 2424859, 0, 1, 2424860, 0, 1, 2424861, 0, 1, 2424862, 0, 1, 2424863, 0, 1, 2424864, 0, 1, 2424865, 0, 1, 2424866, 0, 1, 2424867, 0, 1, 2424868, 0, 1, 2424869, 0, 1, 2424870, 0, 1, 2424871, 0, 1, 2424872, 0, 1, 2424873, 0, 1, 2424874, 0, 1, 2424875, 0, 1, 2424876, 0, 1, 2424877, 0, 1, 2424878, 0, 1, 2424879, 0, 1, 2424880, 0, 1, 2424881, 0, 1, 2424882, 0, 1, 2424883, 0, 1, 2424884, 0, 1, 2424885, 0, 1, 2424886, 0, 1, 2424887, 0, 1, 2424888, 0, 1, 2424889, 0, 1, 2424890, 0, 1, 2424891, 0, 1, 2424892, 0, 1, 2424893, 0, 1, 2424894, 0, 1, 2424895, 0, 1, 2424896, 0, 2 )
script = null

[node name="WallMap" parent="." instance=ExtResource( 2 )]
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 65536, 0, 2, 65540, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 0, 65544, 0, 0, 65545, 0, 0, 131072, 0, 1, 196608, 0, 2, 196639, 0, 2, 262144, 0, 2, 262175, 0, 0, 327680, 0, 3, 327711, 0, 2, 393216, 0, 3, 393247, 0, 1, 458752, 0, 1, 458783, 0, 2 )
script = null

[node name="BackgroundMap" parent="." instance=ExtResource( 3 )]
scale = Vector2( 2, 2 )
tile_data = PoolIntArray( -589824, 536870912, 0, -589823, 536870912, 0, -589822, 536870912, 0, -589821, 536870912, 0, -589820, 536870912, 0, -589819, 536870912, 0, -589818, 536870912, 0, -589817, 536870912, 0, -589816, 536870912, 0, -589815, 536870912, 0, -589814, 536870912, 0, -589813, 536870912, 0, -589812, 536870912, 0, -589811, 536870912, 0, -589810, 536870912, 0, -589809, 536870912, 0, -589808, 536870912, 0, -589807, 536870912, 0, -524288, 536870912, 0, -524287, 536870912, 0, -524286, 536870912, 2, -524285, 536870912, 65537, -524284, 536870912, 0, -524283, 536870912, 0, -524282, 536870912, 65537, -524281, 536870912, 0, -524280, 536870912, 0, -524279, 536870912, 2, -524278, 536870912, 65536, -524277, 536870912, 0, -524276, 536870912, 0, -524275, 536870912, 65536, -524274, 536870912, 0, -524273, 536870912, 65536, -524272, 536870912, 65537, -524271, 536870912, 0, -458752, 536870912, 0, -458751, 536870912, 65538, -458750, 536870912, 0, -458749, 536870912, 65536, -458748, 536870912, 65536, -458747, 536870912, 0, -458746, 536870912, 65536, -458745, 536870912, 1, -458744, 536870912, 2, -458743, 536870912, 65536, -458742, 536870912, 0, -458741, 536870912, 65536, -458740, 536870912, 65536, -458739, 536870912, 0, -458738, 536870912, 1, -458737, 536870912, 0, -458736, 536870912, 0, -458735, 536870912, 0, -393216, 536870912, 0, -393215, 536870912, 0, -393214, 536870912, 0, -393213, 536870912, 65538, -393212, 536870912, 0, -393211, 536870912, 65536, -393210, 536870912, 65536, -393209, 536870912, 65536, -393208, 536870912, 0, -393207, 536870912, 0, -393206, 536870912, 0, -393205, 536870912, 65538, -393204, 536870912, 0, -393203, 536870912, 65536, -393202, 536870912, 0, -393201, 536870912, 0, -393200, 536870912, 65538, -393199, 536870912, 0, -327680, 536870912, 0, -327679, 536870912, 65536, -327678, 536870912, 0, -327677, 536870912, 65536, -327676, 536870912, 65536, -327675, 536870912, 0, -327674, 536870912, 0, -327673, 536870912, 65536, -327672, 536870912, 0, -327671, 536870912, 65536, -327670, 536870912, 65538, -327669, 536870912, 65537, -327668, 536870912, 65537, -327667, 536870912, 0, -327666, 536870912, 2, -327665, 536870912, 65536, -327664, 536870912, 0, -327663, 536870912, 0, -262144, 536870912, 0, -262143, 536870912, 0, -262142, 536870912, 2, -262141, 536870912, 0, -262140, 536870912, 0, -262139, 536870912, 65536, -262138, 536870912, 65538, -262137, 536870912, 0, -262136, 536870912, 0, -262135, 536870912, 0, -262134, 536870912, 65536, -262133, 536870912, 65537, -262132, 536870912, 65536, -262131, 536870912, 0, -262130, 536870912, 0, -262129, 536870912, 65536, -262128, 536870912, 65537, -262127, 536870912, 0, -196608, 536870912, 0, -196607, 536870912, 0, -196606, 536870912, 0, -196605, 536870912, 0, -196604, 536870912, 0, -196603, 536870912, 65536, -196602, 536870912, 65538, -196601, 536870912, 65536, -196600, 536870912, 0, -196599, 536870912, 65537, -196598, 536870912, 65537, -196597, 536870912, 65536, -196596, 536870912, 65536, -196595, 536870912, 0, -196594, 536870912, 65537, -196593, 536870912, 65536, -196592, 536870912, 0, -196591, 536870912, 0, -131072, 536870912, 0, -131071, 536870912, 0, -131070, 536870912, 0, -131069, 536870912, 65538, -131068, 536870912, 0, -131067, 0, 1, -131066, 536870912, 65536, -131065, 536870912, 65537, -131064, 536870912, 65536, -131063, 536870912, 0, -131062, 536870912, 65537, -131061, 536870912, 0, -131060, 536870912, 0, -131059, 536870912, 0, -131058, 536870912, 0, -131057, 536870912, 65538, -131056, 536870912, 0, -131055, 536870912, 0, -65536, 536870912, 0, -65535, 536870912, 0, -65534, 536870912, 65536, -65533, 536870912, 0, -65532, 0, 0, -65531, 0, 2, -65530, 536870912, 65537, -65529, 536870912, 0, -65528, 536870912, 65536, -65527, 536870912, 65537, -65526, 536870912, 0, -65525, 536870912, 65537, -65524, 536870912, 65536, -65523, 536870912, 65538, -65522, 536870912, 0, -65521, 536870912, 65537, -65520, 536870912, 65536, -65519, 536870912, 0, 0, 536870912, 0, 1, 536870912, 65536, 2, 536870912, 0, 3, 0, 65537, 4, 0, 65537, 5, 0, 1, 6, 0, 2, 7, 536870912, 0, 8, 536870912, 65537, 9, 536870912, 65536, 10, 536870912, 0, 11, 536870912, 0, 12, 536870912, 1, 13, 536870912, 65536, 14, 536870912, 2, 15, 536870912, 65537, 16, 536870912, 1, 17, 536870912, 0, 131071, 0, 65536, 65536, 0, 65536, 65537, 0, 65538, 65538, 0, 0, 65539, 0, 0, 65540, 0, 2, 65541, 0, 65537, 65542, 0, 65537, 65543, 536870912, 65536, 65544, 536870912, 0, 65545, 536870912, 65536, 65546, 536870912, 65537, 65547, 536870912, 1, 65548, 536870912, 0, 65549, 536870912, 65537, 65550, 536870912, 2, 65551, 536870912, 0, 65552, 536870912, 0, 65553, 536870912, 0, 131072, 0, 65537, 131073, 0, 65536, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 65536, 131080, 536870912, 0, 131081, 536870912, 0, 131082, 536870912, 65536, 131083, 536870912, 1, 131084, 536870912, 65538, 131085, 536870912, 65536, 131086, 536870912, 1, 131087, 536870912, 65536, 131088, 536870912, 0, 131089, 536870912, 0, 196608, 0, 0, 196609, 0, 65538, 196610, 0, 1, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 0, 65537, 196615, 536870912, 65537, 196616, 536870912, 0, 196617, 536870912, 65536, 196618, 536870912, 65537, 196619, 536870912, 65536, 196620, 536870912, 0, 196621, 536870912, 65537, 196622, 536870912, 0, 196623, 536870912, 0, 196624, 536870912, 0, 196625, 536870912, 0, 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 65537, 262148, 0, 1, 262149, 0, 1, 262150, 0, 1, 262151, 0, 0, 262152, 536870912, 65538, 262153, 536870912, 0, 262154, 536870912, 65537, 262155, 536870912, 0, 262156, 536870912, 65537, 262157, 536870912, 0, 262158, 536870912, 65536, 262159, 536870912, 0, 262160, 536870912, 0, 262161, 536870912, 0, 393215, 0, 2, 327680, 0, 0, 327681, 0, 65537, 327682, 0, 0, 327683, 0, 0, 327684, 0, 65538, 327685, 0, 1, 327686, 0, 0, 327687, 536870912, 0, 327688, 536870912, 0, 327689, 536870912, 1, 327690, 536870912, 65537, 327691, 536870912, 0, 327692, 536870912, 0, 327693, 536870912, 65537, 327694, 536870912, 0, 327695, 536870912, 65536, 327696, 536870912, 0, 327697, 536870912, 0, 393216, 0, 65536, 393217, 0, 0, 393218, 0, 0, 393219, 0, 65536, 393220, 0, 0, 393221, 0, 65538, 393222, 0, 0, 393223, 0, 2, 393224, 536870912, 0, 393225, 536870912, 0, 393226, 536870912, 65537, 393227, 536870912, 0, 393228, 536870912, 65538, 393229, 536870912, 0, 393230, 536870912, 0, 393231, 536870912, 0, 393232, 536870912, 0, 393233, 536870912, 0, 458752, 536870912, 0, 458753, 536870912, 2, 458754, 536870912, 0, 458755, 0, 65536, 458756, 0, 65537, 458757, 0, 0, 458758, 0, 65536, 458759, 536870912, 1, 458760, 536870912, 0, 458761, 536870912, 65537, 458762, 536870912, 65537, 458763, 536870912, 0, 458764, 536870912, 65536, 458765, 536870912, 65536, 458766, 536870912, 0, 458767, 536870912, 0, 458768, 536870912, 65537, 458769, 536870912, 0, 524288, 536870912, 0, 524289, 536870912, 0, 524290, 536870912, 65537, 524291, 0, 1, 524292, 0, 0, 524293, 0, 65538, 524294, 0, 1, 524295, 536870912, 65536, 524296, 536870912, 65536, 524297, 536870912, 0, 524298, 536870912, 65536, 524299, 536870912, 0, 524300, 536870912, 0, 524301, 536870912, 0, 524302, 536870912, 65538, 524303, 536870912, 65536, 524304, 536870912, 0, 524305, 536870912, 0, 589824, 536870912, 0, 589825, 536870912, 0, 589826, 536870912, 65536, 589827, 0, 1, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 536870912, 0, 589832, 536870912, 0, 589833, 536870912, 65536, 589834, 536870912, 0, 589835, 536870912, 65536, 589836, 536870912, 65538, 589837, 536870912, 65536, 589838, 536870912, 1, 589839, 536870912, 1, 589840, 536870912, 2, 589841, 536870912, 0, 655360, 536870912, 0, 655361, 536870912, 0, 655362, 536870912, 0, 655363, 536870912, 0, 655364, 0, 65536, 655365, 0, 0, 655366, 0, 0, 655367, 536870912, 0, 655368, 536870912, 0, 655369, 536870912, 0, 655370, 536870912, 0, 655371, 536870912, 0, 655372, 536870912, 0, 655373, 536870912, 0, 655374, 536870912, 0, 655375, 536870912, 0, 655376, 536870912, 0, 655377, 536870912, 0, 720901, 0, 65536, 720902, 0, 65536 )

[node name="KinematicBody2D" parent="." instance=ExtResource( 4 )]
z_index = 1

[node name="door1" type="Sprite" parent="."]
position = Vector2( 226.737, 529.802 )
texture = ExtResource( 5 )

[node name="door1" type="Area2D" parent="door1"]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="door1/door1"]
shape = SubResource( 1 )

[node name="door2" type="Sprite" parent="."]
position = Vector2( 428.726, 531.69 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="door2" type="Area2D" parent="door2"]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="door2/door2"]
shape = SubResource( 1 )

[node name="HighScore" type="Label" parent="."]
margin_left = 635.0
margin_top = 526.0
margin_right = 695.0
margin_bottom = 540.0
rect_scale = Vector2( 3, 3 )
custom_colors/font_color = Color( 0.545098, 0.67451, 0.0588235, 1 )
custom_colors/font_outline_modulate = Color( 0.0588235, 0.219608, 0.0588235, 1 )
custom_colors/font_color_shadow = Color( 0.0588235, 0.219608, 0.0588235, 1 )
text = "100"
align = 1

[node name="Coins" type="Label" parent="."]
margin_left = 795.0
margin_top = 486.0
margin_right = 855.0
margin_bottom = 500.0
rect_scale = Vector2( 3, 3 )
custom_colors/font_color = Color( 0.0588235, 0.67451, 0.447059, 1 )
custom_colors/font_outline_modulate = Color( 0.0588235, 0.219608, 0.0588235, 1 )
custom_colors/font_color_shadow = Color( 0.0588235, 0.219608, 0.0588235, 1 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighScoreText" type="Label" parent="."]
visible = false
margin_left = 702.0
margin_top = 477.0
margin_right = 742.0
margin_bottom = 491.0
rect_scale = Vector2( 3, 3 )
text = "PB"

[node name="pd frame" type="Sprite" parent="."]
position = Vector2( 723.506, 488.595 )
z_index = -1
texture = ExtResource( 7 )
hframes = 3
frame = 1
[connection signal="body_entered" from="door1/door1" to="." method="_on_Area2D_body_entered" binds= [ "door1" ]]
[connection signal="body_exited" from="door1/door1" to="." method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="door2/door2" to="." method="_on_Area2D_body_entered" binds= [ "door2" ]]
[connection signal="body_exited" from="door2/door2" to="." method="_on_door2_body_exited"]
